--- a/src/pages/guidelines/color/overview.mdx
+++ b/src/pages/guidelines/color/overview.mdx
@@ -323,6 +323,16 @@ depending on the theme.
 See the [color usage](/guidelines/color/usage) tab for the full list of color
 tokens.
 
+### Token names
+
+For quick reference, the role of a token is represented in the token name itself
+to help you correctly apply tokens. The first part of the token name references
+the general UI element the color is being applied to,
+like `background`, `text`, or `border`. The second part of token name will
+specify its unique role within the element group
+like `$border-subtle` or `$text-primary`. Additionally, some tokens include
+aninteraction state at the end, like `$background-hover`.
+
 <Row>
 <Column colLg={12}>
 
@@ -337,16 +347,6 @@ tokens.
 </Caption>
 
 <br />
-
-### Token names
-
-For quick reference, the role of a token is represented in the token name itself
-to help you correctly apply tokens. The first part of the token name references
-the general UI element the color is being applied to,
-like `background`, `text`, or `border`. The second part of token name will
-specify its unique role within the element group,
-like `$border-subtle` or `$text-primary`. Additionally, some tokens include an
-interaction state at the end, like `$background-hover`.
 
 ### Core tokens
 
