update resource card

--- a/src/pages/guidelines/color/implementation.mdx
+++ b/src/pages/guidelines/color/implementation.mdx
@@ -658,8 +658,9 @@ _IBMers only_.
     subTitle="Sketch plug-in"
     title="Carbon theme switcher"
     href="https://github.com/IanKitchen-IBM/carbon-theme-switcher"
-    actionIcon="arrowRight">
+    actionIcon="launch">
+
     <MdxIcon name="sketch" />
+
   </ResourceCard>
 </Column>
-</Row>
